			* UI_Push (as well as UI_SetEnabled) pushes the current UI, UI_Pop() pops it
			* Up to MAX_UIs (32) UIs can be stacked currently
			* You can't push the same UI to the stack twice in a row (in order to prevent bugs), but you can stack the same UI twice non-consecutively.
	* Master server changes:
		* The master server protocol now sends the number of players in the server directly.
		* Added an sv_debug_heartbeat cvar that sends the heartbeat every two seconds instead of five minutes. It is only present on debug builds, to remove any outside possibility of spamming the server.
	* Added the ability for the engine to detect when it is in graphics mode (i.e. if the renderer lib has been initalised yet)
	* Got rid of viddef in the engine (it's now an internal OpenGL renderer cvar) and used gl_width/gl_height cvars everywhere
	* Rendering API version 10
		* Vid_ChangeResolution doesn't have parameters anymore
	* Added more posters to z_tdm_labrats
	* Made many more physics parameters tunable CVars:
		* sv_friction - default value of 6
		* sv_waterfriction - default value of 1
		* sv_stopspeed - default value of 100
	* Added cvars to control the console
		* cl_console_disabled - determines if the console is disabled entirely. Default value is 0.
		* cl_console_fraction - determines how much of the screen the console will take up. The default value is 0.5 (50%)
			* For the old fullscreen console behaviour, use cl_console_fraction 1.0
	* The console is now disableable when you aren't doing anything
	* Massive code reorganisation for client
	* Added light fixture details to the lights in the bases of z_tdm_subway
	* Rendering API version 11:
		* Added "autoscale" parameter to DrawPic, DrawPicStretch and DrawPicRegion

BUG FIXES:
	* Limited relative velocity gain to the object's velocity so you can't gain velocity forever.
		* However this does not apply to the tangfuslicator ammo or rockets, so you can boost off of those.