@@ -27,6 +27,10 @@ bool UI_MainMenuQuickstartUICreate()
 		return true;
 
 	UI_SetStackable("MainMenuQuickstartUI", true);
+	UI_AddImage("MainMenuQuickstartUI", "UI_MainMenuQuickstartUI_Background", "2d/ui/mainmenuquickstartui_background", 0, 0, r_width->value, r_height->value);
+	UI_SetImageIsStretched("MainMenuQuickstartUI", "UI_MainMenuQuickstartUI_Background", true);
+	UI_UseScaledAssets("MainMenuQuickstartUI", "UI_MainMenuQuickstartUI_Background", true);
+
 
 	// create uI
 	return true;
